--- a/site/guide/configuration/_manage-permissions.qmd
+++ b/site/guide/configuration/_manage-permissions.qmd
@@ -1,3 +1,5 @@
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
 1. Under User Permissions, select **Permissions**.
 
 1. Add or delete roles from a specific permission:
