--- a/site/guide/reporting/_create-a-visualization.qmd
+++ b/site/guide/reporting/_create-a-visualization.qmd
@@ -61,10 +61,10 @@ For example, to create an open findings visualization in stacked bar chart forma
 
 1. Select a **[dataset]{.smallcaps}**:
 
-    - **[Findings](/guide/model-validation/working-with-model-findings.qmd)**
-    - **[Inventory Models](/guide/model-inventory/working-with-model-inventory.qmd)**
+    - **[Findings](/guide/model-validation/working-with-model-findings.qmd){target="_blank"}**
+    - **[Inventory Models](/guide/model-inventory/working-with-model-inventory.qmd){target="_blank"}**
 
-1. Select the [visualization configuration options](/guide/reporting/manage-custom-reports.qmd#visualization-configuration-options) to apply to the dataset.
+1. Select the [visualization configuration options](/guide/reporting/manage-custom-reports.qmd#visualization-configuration-options){target="_blank"} to apply to the dataset.
 
 1. When you are done configuring your dataset, click **Add Visualization** to insert your custom widget onto the analytics page.
 
