--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -190,6 +190,8 @@ Manage model inventory fields
 3. Select the field [type]{.smallcaps}, enter a [name]{.smallcaps}, and a [description]{.smallcaps}.
 4. Click **Save** to add your field.
 
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
 ::::
 
 ## {.scrollable}
@@ -250,6 +252,8 @@ Under User Permissions, select **Model Stakeholder Types**:
 5. Toggle specific permissions for that stakeholder type by checking or unchecking the boxes next to the permission. 
 6. Click **Save Permissions** to apply your changes.
 
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
 ::::
 
 # Customize documentation templates {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
@@ -306,6 +310,8 @@ Under Workplace Settings, select **Templates**:
 4. In the Duplicate Template YAML editor that opens, give your copy a **[template name]{.smallcaps}**.
 5. Click **Duplicate Template** to create a copy of your template.
 
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
 ::::
 
 ## {.scrollable}
@@ -345,6 +351,8 @@ Under Workplace Settings, select **Templates**:
 5. Click **Create New Version** to view a side-by-side comparison of your changes with the previous version.
 6. Add a description in **[version notes]{.smallcaps}** to track your changes.
 7. Click **Save** to save the new version.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
@@ -403,6 +411,8 @@ Private blocks can be modified by any user role and are unique to that user.
 3. Select the following **[sharing]{.smallcaps}** option: **Shared**
 4. Click **Add Block** to save your text block.
 
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
 ::::
 
 ## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
@@ -416,6 +426,8 @@ Private blocks can be modified by any user role and are unique to that user.
 2. To the right of the text block you created earlier, click **{{< fa ellipsis-vertical >}}** and select **Duplicate Text Block**.
 3. Make your changes to the details of the block, and select the following **[sharing]{.smallcaps}** option: **Private**
 4. Click **Duplicate Block** to save a private copy of the text block.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
