--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -179,6 +179,8 @@ Get your organization ready for use by first defining business units and use cas
 3. Enter in your **[business unit name]{.smallcaps}**.
 4. Click **{{< fa plus >}} Add Business Unit** to save your changes.
 
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
 ::::
 
 ## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
@@ -192,6 +194,8 @@ Get your organization ready for use by first defining business units and use cas
 2. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
 3. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
 4. Click **{{< fa plus >}} Add Use Case** to save your changes.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
@@ -246,6 +250,8 @@ Under Workplace Settings, select **Risk Areas & Validation Guidelines**:
 6. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
 7. Click **Add Guideline** to insert your guideline to your risk area.
 
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
 ::::
 
 # Groups, roles, & permissions {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
@@ -286,6 +292,8 @@ Under User Permissions in the sidebar, select **Groups**:
 2. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
 3. Select users from the list to add them to the group.
 4. Click **{{< fa check >}} Create Group** to save.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
@@ -339,6 +347,8 @@ Under User Permissions, select **Roles**:
 6. Toggle specific user permissions for that role by checking or unchecking the boxes next to the permission.
 7. Click **Save Permissions** to apply your changes.
 
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
 ::::
 
 ## {.scrollable .center}
@@ -374,6 +384,8 @@ In addition to assigning permissions via individual user roles, you can add role
 1. Under User Permissions, select **Permissions**.
 2. **Add the role you created earlier** to a specific permission by clicking **{{< fa plus >}}**, then selecting the permission from the drop-down menu.
 2. **Remove the role you created earlier** from a specific permission by clicking **{{< fa x >}}** next to the role.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
@@ -480,6 +492,8 @@ Under User Permissions, select **Roles**:
 3. Click **{{< fa plus >}}** next to the role for each role to be assigned.
 4. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
 5. Click **{{< fa x >}}** to delete a role from a user.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
