--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -183,7 +183,7 @@ View report data
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
 
 :::: {.f4 .pr3 .pl3 .mt4 .embed}
-Reports will not include data or findings from [archived models](/guide/model-inventory/archive-delete-models.qmd).
+Reports will not include data or findings from [archived models](/guide/model-inventory/archive-delete-models.qmd){target="_blank"}.
 :::
 :::
 
@@ -266,7 +266,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 :::
 
 1. Click on the tab for the custom page you added previously.
-2. Click **{{< fa circle-plus >}}** to open the Add Visualization panel.
+1. Click **{{< fa pencil >}} Edit Dashboard** and select **{{< fa pencil >}} Add Widget** then **{{< fa pencil >}} Add Visualization**.
 3. On the Add Visualization panel, enter in your **[title]{.smallcaps}**.
 4. Select a **[visualization type]{.smallcaps}**.
 5. Select a **[dataset]{.smallcaps}**.
