--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -117,7 +117,7 @@ From here, you can:
 Make sure you're logged in and have refreshed the page in a Chromium-based browser.
 :::
 
-When you're done navigating around, click [{{< fa chevron-right >}}]() to continue.
+When you're done exploring, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
