--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -396,7 +396,7 @@ For example:
 1. Click **Models** to review reports on models.
 3. Click into any widget to review the models reported by that widget.
 
-When you're done, click [{{< fa chevron-right >}}]() to continue.
+When you're done exploring, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
