--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -177,7 +177,7 @@ From here, you can:
 Make sure you're logged in and have refreshed the page in a Chromium-based browser.
 :::
 
-When you're done navigating around, click [{{< fa chevron-right >}}]() to continue.
+When you're done exploring, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
@@ -372,7 +372,7 @@ The structure of the model documentation reflects the documentation template app
 
 :::
 
-When you're done exploring the model documentation, click [{{< fa chevron-right >}}]() to continue.
+When you're done exploring, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
