--- a/site/index.qmd
+++ b/site/index.qmd
@@ -66,6 +66,10 @@ a:hover {
   text-decoration: none;
 }
 
+.quarto-contet {
+  background-color:  #EDF9FA;
+}
+
 /* Card hover */
 .card:hover {
   border: 1px solid #083E44;
@@ -120,7 +124,7 @@ a:hover {
   background: linear-gradient(to bottom, #EDF9FA 80%, #ffffff);
   margin: 0;
   padding: 0;
-  min-height: auto;     /* allows the content to expand */
+  min-height: 100vh;     /* allows the content to expand */
   height: auto;         /* prevents clipping below */
 }
 /* color of the text on homepage */
@@ -197,9 +201,7 @@ a:hover {
 ![](/homepage_docsite/setup_icon.svg){.mb3 width="48"}
 ::::
 ### Setup + Administration
-<span class="light-text">
-Invite users and control access to ValidMind by managing user roles, groups, and permissions. 
- </span>
+[Invite users and control access to ValidMind by managing user roles, groups, and permissions.]{.light-text}
 
 [**Setup QuickStart**](/get-started/quickstart-administrator.qmd){.button-green .cta .mt3}
 :::
@@ -209,9 +211,7 @@ Invite users and control access to ValidMind by managing user roles, groups, and
 ![](/homepage_docsite/model_icon.svg){.mb3 width="48"}
 ::::
 ### Model Development
-<span class="light-text">
-Save time by automating documentation and testing for your models using the ValidMind Library. 
-</span>
+[Save time by automating documentation and testing for your models using the ValidMind Library.]{.light-text}
 
 [**Developer quickstart**](/get-started/quickstart-developer.qmd){.button-green .cta .mt3}
 :::
@@ -221,9 +221,7 @@ Save time by automating documentation and testing for your models using the Vali
 ![](/homepage_docsite/model_valid_icon.svg){.mb3 width="48"}
 ::::
 ### Model Validation
-<span class="light-text">
-Quickly assess compliance by linking evidence from developers in your validation reports. 
-</span>
+[Quickly assess compliance by linking evidence from developers in your validation reports.]{.light-text}
 
 [**Validator QuickStart**](/get-started/quickstart.qmd){.button-green .cta .mt3}
 :::
@@ -231,10 +229,8 @@ Quickly assess compliance by linking evidence from developers in your validation
 
 <!-- VALIDMIND TOUR -->
 ::: {.tour-bg .tc .mt5 .mb5}
-### ValidMind *<span class="pink normal-weight">Tour</span>*
-<span class="light-text tour-text-container">
-ValidMind is a toolkit that helps identify AI and LLM risks while generating regulatory-compliant model documentation for developers, data scientists, and compliance teams.  
-</span>
+### ValidMind *[Tour]{.pink .normal-weight}*
+[ValidMind is a toolkit that helps identify AI and LLM risks while generating regulatory-compliant model documentation for developers, data scientists, and compliance teams.]{.light-text .tour-text-container}
 
 [**What is ValidMind?**](/training/fake-tour/product-tour.qmd){.button-white .cta .mt3}
 :::
@@ -243,10 +239,8 @@ ValidMind is a toolkit that helps identify AI and LLM risks while generating reg
 :::: {.flex .flex-wrap .justify-around .mt5}
 
 ::: {.w-50-ns .pr4}
-### ValidMind <span class="pink normal-weight">Academy</span> 
-<span class="light-text"> 
-Gain hands-on experience and explore what ValidMind has to offer with our interactive training environment.  
-</span>
+### ValidMind [Academy]{.pink .normal-weight}
+[Gain hands-on experience and explore what ValidMind has to offer with our interactive training environment.]{.light-text}
 [**Learn through doing**](/training/training.qmd){.button-white .cta .mt3}
 :::
 
@@ -254,9 +248,7 @@ Gain hands-on experience and explore what ValidMind has to offer with our intera
 
 ### Latest Release  
 ![](/homepage_docsite/release_icon.svg){.mb3 width="30"} v1.26.09 / January 24, 2025  
-<span class="light-text">
-We’ve introduced two new quickstart Jupyter Notebooks dealing with option pricing in the Capital Markets section of our code samples.  
-</span>
+[We've introduced two new quickstart Jupyter Notebooks dealing with option pricing in the Capital Markets section of our code samples.]{.light-text}
 
 [**View all releases**](/releases/all-releases.qmd)
 :::
@@ -267,69 +259,3 @@ We’ve introduced two new quickstart Jupyter Notebooks dealing with option pric
 :::
 <!-- CLOSE .column-screen to allow footer to render -->
 :::
-
-
-<!-- OUTSIDE OF THE WHITE CARD -->
-<!-- ::: {.footer-container}
-
-::: {.footer-content} -->
-
-<!-- LEFT SIDE: Logo and copyright -->
-<!-- ::: {.footer-left}
-![](/homepage_docsite/ValidMind MASTER Brand Assets_Logo-White R 2.svg){width="140"}
-
-![](/homepage_docsite/Ellipse 1.svg){width="40"}
-![](/homepage_docsite/Ellipse 1.svg){width="40"}
-![](/homepage_docsite/Ellipse 1.svg){width="40"}
-
-© Copyright 2025 ValidMind Inc.  
-All Rights Reserved.  
-[Privacy Policy](/privacy)   [Terms of Service](/terms)
-::: -->
-
-<!-- FOOTER COLUMNS -->
-<!-- ::: {.footer-columns}
-
-::: {.footer-column}
-**Platform**  
-[Platform Overview](/platform/overview)  
-[Request a Demo](/platform/demo)
-:::
-
-::: {.footer-column}
-**Solutions**  
-[Solutions Overview](/solutions/overview)  
-[AI Models](/solutions/ai)  
-[Statistical & Traditional Models](/solutions/statistical)  
-[Generative AI Models](/solutions/generative)  
-[Advantage Partner Ecosystem](/solutions/partners)
-:::
-
-::: {.footer-column}
-**Community**  
-[Solutions Overview](/community/overview)  
-[AI Models](/community/ai)  
-[Statistical & Traditional Models](/community/statistical)  
-[Generative AI Models](/community/generative)  
-[Advantage Partner Ecosystem](/community/partners)
-:::
-
-::: {.footer-column}
-**Resources**  
-[Blog](/blog)  
-[Events](/events)  
-[Technical Briefs](/briefs)  
-[Webinars](/webinars)  
-[Legal](/legal)
-:::
-
-::: {.footer-column}
-**Company**  
-[About Us](/about)  
-[News](/news)  
-[Careers](/careers)  
-[Contact](/contact)
-:::
-
-:::
-:::  -->
