--- a/site/index.qmd
+++ b/site/index.qmd
@@ -65,9 +65,8 @@ a {
 a:hover {
   text-decoration: none;
 }
-
-.quarto-contet {
-  background-color:  #EDF9FA;
+.quarto-content {
+  background-color: #EDF9FA;
 }
 
 /* Card hover */
@@ -121,12 +120,27 @@ a:hover {
 
 /* Gradient background container */
 .column-screen {
-  background: linear-gradient(to bottom, #EDF9FA 80%, #ffffff);
+  /* background: linear-gradient(to bottom, #EDF9FA 80%, #ffffff); */
   margin: 0;
   padding: 0;
   min-height: 100vh;     /* allows the content to expand */
   height: auto;         /* prevents clipping below */
+  width: 100vw;
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 0; 
 }
+/*to fix white gap at the top*/
+.quarto-container,
+.page-columns,
+.page-layout,
+body,
+html {
+  background: linear-gradient(to bottom, #EDF9FA 80%, #ffffff);
+}
+
+
 /* color of the text on homepage */
 .light-text {
   color: #585F60; /* or #555, adjust to taste for brightness */
