changes to links in index.qmd

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -7,50 +7,6 @@ resources:
   - assets/**
 filters:
     - tachyons
-# listing:
-  # - id: admin
-  #   type: grid
-  #   grid-columns: 1
-  #   max-description-length: 250
-  #   sort: false
-  #   fields: [title, description]
-  #   contents:
-  #   - /guide/configuration/accessing-validmind.qmd
-  #   - /guide/configuration/managing-your-organization.qmd
-  #   - /guide/configuration/managing-users.qmd
-  # - id: developer
-  #   type: grid
-  #   grid-columns: 1
-  #   max-description-length: 250
-  #   sort: false
-  #   fields: [title, description]
-  #   contents:
-  #   - /developer/validmind-library.qmd
-  #   - /developer/supported-models.qmd
-  #   - /developer/samples-jupyter-notebooks.qmd
-  # - id: validator
-  #   type: grid
-  #   grid-columns: 1
-  #   max-description-length: 250
-  #   sort: false
-  #   fields: [title, description]
-  #   contents:
-  #   - /guide/model-validation/preparing-validation-reports.qmd
-  #   - /guide/model-validation/working-with-model-findings.qmd
-  #   - /guide/reporting/working-with-analytics.qmd
-  # - id: releases
-  #   type: grid
-  #   grid-columns: 3
-  #   max-description-length: 150
-  #   sort: false
-  #   fields: [title, subtitle, description]
-  #   contents:
-    # MAKE-RELEASE-NOTES-LATEST-MARKER
-      # - /releases/2025/2025-apr-24/release-notes.qmd
-      # - /releases/2025/2025-mar-07/release-notes.qmd
-      # - /releases/2025/2025-jan-31/release-notes.qmd
-    # MAKE-RELEASE-NOTES-OLDEST-MARKER
-
 ---
 
 ```{=html}
@@ -178,25 +134,7 @@ html {
 <script src="https://unpkg.com/lunr/lunr.js"></script>
 <script src="scripts/validsearch.js"></script>
 
-<!-- ::: {.tc}
-[quickstart](get-started/developer/try-with-jupyterhub.qmd){.button-pink .cta}
-[open-source software](https://github.com/validmind/validmind-library/){.button-white .cta}
-
-::: -->
-
 :::
-
-<!-- ::: {.w-40-ns}
-
-::: {.image-container}
-![](assets/img/platform-line-1.png)
-![](assets/img/platform-line-2.png)
-![](assets/img/platform-line-3.png)
-![](assets/img/platform-line-4.png)
-![](assets/img/platform-line-5.png)
-:::
-
-::: -->
 
 ::: {.w-10-ns}
 <!-- FILLER COLUMN DO NOT REMOVE -->
@@ -237,7 +175,7 @@ html {
 ### Model Validation
 [Quickly assess compliance by linking evidence from developers in your validation reports.]{.light-text}
 
-[**Validator QuickStart**](/get-started/quickstart.qmd){.button-green .cta .mt3}
+[**Validator QuickStart**](/get-started/quickstart-validator.qmd){.button-green .cta .mt3}
 :::
 ::::
 
