Simplfying embed filenames pt1

--- a/site/guide/model-documentation/collaborate-with-others.qmd
+++ b/site/guide/model-documentation/collaborate-with-others.qmd
@@ -89,9 +89,9 @@ While working with content blocks in documentation,[^5] you can save named versi
 
 ## Commenting 
 
-{{< include _collaborate-with-others-activity.qmd >}}
+{{< include _comment-activity.qmd >}}
 
-{{< include _collaborate-with-others-comments.qmd >}}
+{{< include _commenting.qmd >}}
 
 ### Edit comments
 
