--- a/site/guide/model-documentation/working-with-model-documentation.qmd
+++ b/site/guide/model-documentation/working-with-model-documentation.qmd
@@ -68,9 +68,9 @@ This section describes how to work with model documentation in the {{< var valid
 
 ## Document Overview
 
-{{< include _model-documentation-overview.qmd >}}
+{{< include _document-overview.qmd >}}
 
-{{< include _review-model-documentation.qmd >}}
+{{< include _locate-document-overview.qmd >}}
 
 ### Add or edit documentation
 
