--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -290,13 +290,13 @@ You can also embed several sets of instructions into the same two-column layout,
 ::: {.f5 .nt2}
 :::
 
-For example, the following links to our [_collaborate-with-others-comments.qmd](/guide/model-documentation/_collaborate-with-others-comments.qmd){target="_blank"} single-source include file. 
+For example, the following links to our [_commenting.qmd](/guide/model-documentation/_commenting.qmd){target="_blank"} single-source include file. 
 
 All you need to do is make sure that the headers within `.panel-tabset` are set to `h3` (`###`). 
 
 ::: {.panel-tabset}
 
-{{< include /guide/model-documentation/_collaborate-with-others-comments.qmd >}}
+{{< include /guide/model-documentation/_commenting.qmd >}}
 
 :::
 
