Simplfying embed filenames pt2

--- a/site/guide/model-inventory/edit-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/edit-model-inventory-fields.qmd
@@ -48,13 +48,13 @@ To work with attachments on models, first add an attachment inventory field.[^5]
 
 1. On the model's detail page, click on the header of your attachment field.
 
-{{< include _manage-supporting-documentation-add.qmd >}}
+{{< include _add-attachments.qmd >}}
 
 #### Remove attachments from a model
 
 1. On the model's detail page, click on the header of your attachment field.
 
-{{< include _manage-supporting-documentation-remove.qmd >}}
+{{< include _remove-attachments.qmd >}}
 
 ## What's next
 
