Simplfying embed filenames pt3

--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -77,7 +77,7 @@ Most updates are applied immediately but you must click **Save** to make changes
 
 ### Track issue resolution
 
-{{< include _track_issue_resolution.qmd >}}
+{{< include _track-issue-resolution.qmd >}}
 
 ### Manage supporting documentation
 
