--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -180,7 +180,7 @@ Manage model inventory fields
 
 ## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .auto-collapse-10}
+:::: {.slideover--b .half .auto-collapse-10}
 ::: {.tc}
 **Add an inventory field**
 :::
@@ -401,7 +401,7 @@ Private blocks can be modified by any user role and are unique to that user.
 
 ## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .auto-collapse-10}
+:::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Add a shared text block**
 :::
@@ -417,7 +417,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .auto-collapse-10}
+:::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Duplicate a text block for private use**
 :::
