--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -169,7 +169,7 @@ Get your organization ready for use by first defining business units and use cas
 
 ## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .auto-collapse-10}
+:::: {.slideover--b .half .auto-collapse-10}
 ::: {.tc}
 **Add a business unit**
 :::
@@ -185,7 +185,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .auto-collapse-10}
+:::: {.slideover--b .half .auto-collapse-10}
 ::: {.tc}
 **Add a use case**
 :::
@@ -235,7 +235,7 @@ Next, define your risk areas and validation guidelines:
 
 ## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .auto-collapse-10}
+:::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Add a risk area & validation guideline**
 :::
@@ -281,7 +281,7 @@ Manage user groups
 
 ## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .auto-collapse-10}
+:::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Add a user group**
 :::
@@ -480,7 +480,7 @@ After granting access to your users, you can adjust their roles as needed:
 
 ## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .auto-collapse-10}
+:::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Modify a role's users**
 :::
