--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -1,7 +1,7 @@
 :::: {.content-visible unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-1. Under Workspace Settings, select **{{< fa sliders >}} Inventory Fields**. Here you can edit existing inventory fields, or add a new one:
+1. Under Workspace Settings, select **Model Inventory Fields**. Here you can edit existing inventory fields, or add a new one:
 
     - To add a new field, click **{{< fa plus >}} Add New Field**. 
     - To edit an existing field, select **{{< fa pencil >}} Edit** under the Actions column for the desired field.
@@ -31,7 +31,7 @@
 :::: {.content-hidden unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-1. Under Workspace Settings, select **{{< fa sliders >}} Inventory Fields**. Here you can edit existing inventory fields, or add a new one:
+1. Under Workspace Settings, select **Model Inventory Fields**. Here you can edit existing inventory fields, or add a new one:
 
     - To add a new field, click **{{< fa plus >}} Add New Field**. 
     - To edit an existing field, select **{{< fa pencil >}} Edit** under the Actions column for the desired field.
