--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -29,7 +29,7 @@ aliases:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workspace Settings, select **{{< fa sliders >}} Inventory Fields**.
+2. Under Workspace Settings, select **Model Inventory Fields**.
 
 3. Select **{{< fa pencil >}} Edit** under the Actions column for the field you'd like to delete.
 
