--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -121,7 +121,7 @@ For this training course, we'll have you register a dummy model via the **{{< fa
 :::: {.slideover--r .three-quarters .auto-collapse-10}
 **Register a new model**
 
-1. Select the option for a **new model**.
+1. Select the option for a **New Model**.
 2. You can fill in other options according to your preference.
 3. Click **{{< fa plus >}} Register Model** to add the model to your inventory.
 
@@ -185,7 +185,7 @@ Manage model inventory fields
 **Add an inventory field**
 :::
 
-1. Under Workspace Settings, select **{{< fa sliders >}} Inventory Fields**.
+1. Under Workspace Settings, select **Model Inventory Fields**.
 2. Click **{{< fa plus >}} Add New Field**.
 3. Select the field [type]{.smallcaps}, enter a [name]{.smallcaps}, and a [description]{.smallcaps}.
 4. Click **Save** to add your field.
@@ -198,7 +198,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Mange model stakeholder types!
+Mange model stakeholder types
 
 ::: {.tc}
 [Learn more ...](/guide/configuration/manage-model-stakeholder-types.qmd){.button target="_blank"}
@@ -243,11 +243,11 @@ Please note that the stock **Model Developer**, **Model Owner**, and **Model Val
 **Add a model stakeholder type**
 :::
 
-Under User Permissions, select **Model Stakeholder Types**:
+Under User Permissions, select **Model Stakeholder Type**:
 
 1. Click **{{< fa plus >}} Add New Stakeholder Type**.
 2. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the stakeholder type.
-3. Click on the stakeholder type whose permissions you added above.
+3. Click on the stakeholder type you added above.
 4. On the **Permissions** tab, select **Edit Permissions** to modify inventory field permissions to or from that type.
 5. Toggle specific permissions for that stakeholder type by checking or unchecking the boxes next to the permission. 
 6. Click **Save Permissions** to apply your changes.
