--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -286,7 +286,7 @@ Manage user groups
 **Add a user group**
 :::
 
-Under User Permissions in the sidebar, select **Groups**:
+Under User Permissions, select **Groups**:
 
 1. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
 2. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
