--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -199,7 +199,7 @@ To start the documentation process, a model must already be registered in the mo
 :::: {.slideover--r .three-quarters .auto-collapse-10}
 **Register a binary classification model**
 
-1. Select the option for a **new model:**
+1. Select the option for a **New Model**:
 - **Documentation template** — <br>`Binary classification`
 - **Use case** — <br>`Attrition/Churn Management`<br><br>
   You can fill in other options according to your preference.
