--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -203,7 +203,7 @@ For this training course, we'll have you register a dummy model via the **{{< fa
 :::: {.slideover--r .three-quarters .auto-collapse-10}
 **Register a binary classification model**
 
-1. Select the option for a **new model:**
+1. Select the option for a **New Model**:
 - **Documentation template** — <br>`Binary classification`
 - **Use case** — <br>`Attrition/Churn Management`<br><br>
   You can fill in other options according to your preference.
