--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -406,8 +406,9 @@ Invite users via email
 
 ::: {.column width="70%" .bl .pl4 .f3}
 
+Once you've set up the basics, grant users access to the {{< var validmind.platform >}} by sending them email invitations to join your organization:
+
 ::: {.panel-tabset}
-Grant users access to the {{< var validmind.platform >}} by sending them email invitations to join your organization:
 
 ### Invite new users
 
@@ -424,13 +425,16 @@ Grant users access to the {{< var validmind.platform >}} by sending them email i
 
 ## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--r .three-quarters .auto-collapse-10}
+:::: {.slideover--r .auto-collapse-10}
 **Invite a new user**
 
-Invite a user to join your organization:
+1. Under User Permissions, click **Invite New Users**.
+2. Enter in the details under Invite by Email:
 
 - **Group** — The group you created earlier.
 - **Role** — The role you created earlier.
+
+3. Click **{{< fa envelope >}} Send Invite**.
 
 ::: {.embed}
 **Tip:** Try inviting yourself! Add **+1** to your email handle (**handle+1@your-company.com**) and accept the invitation.
