--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -123,7 +123,7 @@ For this training course, we'll have you register a dummy model via the **{{< fa
 
 1. Select the option for a **New Model**.
 2. You can fill in other options according to your preference.
-3. Click **{{< fa plus >}} Register Model** to add the model to your inventory.
+3. Click **Register Model** to add the model to your inventory.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -306,8 +306,8 @@ Under Workplace Settings, select **Templates**:
 
 1. Select one of the tabs for the type of template you want to duplicate. For example: **Documentation**
 2. Select the template to duplicate. For example: **Binary classification**
-3. On the template details page, click **{{< fa copy >}} Duplicate Template**. 
-4. In the Duplicate Template YAML editor that opens, give your copy a **[template name]{.smallcaps}**.
+3. On the template details page, click **{{< fa copy >}} Duplicate Template**.
+4. Give your copy a **[template name]{.smallcaps}** and a **[template description]{.smallcaps}**.
 5. Click **Duplicate Template** to create a copy of your template.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
