--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -187,7 +187,7 @@ When you're done exploring, click [{{< fa chevron-right >}}]() to continue.
 Use the model inventory to track comprehensive details for all your models throughout the model lifecycle. The model inventory is customizable and extensible, with a layout that can be configured to suit your needs.
 
 ::: {.f6 .pl3 .pr3 .embed}
-To start the documentation process, a model must already be registered in the model inventory via the **{{< fa plus >}} Register Model** modal.
+To start the documentation process, a model must already be registered in the model inventory via the **Register Model** modal.
 :::
 
 **Let's register a model together** on the next page. {{< fa hand-point-right >}}
@@ -203,7 +203,7 @@ To start the documentation process, a model must already be registered in the mo
 - **Documentation template** — <br>`Binary classification`
 - **Use case** — <br>`Attrition/Churn Management`<br><br>
   You can fill in other options according to your preference.
-2. Click **{{< fa plus >}} Register Model** to add the model to your inventory.
+2. Click **Register Model** to add the model to your inventory.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
