--- a/site/get-started/platform/register-your-first-model.qmd
+++ b/site/get-started/platform/register-your-first-model.qmd
@@ -25,7 +25,7 @@ Signing up is FREE — {{< var link.register >}}
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Click **{{< fa plus >}} Register New Model**.[^1]
+2. Click **{{< fa plus >}} Register Model**.[^1]
 
    To register a model for use with the QuickStart notebook, select:
 
@@ -37,7 +37,7 @@ Signing up is FREE — {{< var link.register >}}
 
    You can fill in other options according to your own preference. 
 
-2. Click **{{< fa plus >}} Register Model**.
+2. Click **Register Model**.
 
 3. After the model is registered, confirm that initial model documentation and validation report outlines have been provided based on the documentation template[^2] you selected. 
 
