--- a/site/guide/templates/_duplicate-template.qmd
+++ b/site/guide/templates/_duplicate-template.qmd
@@ -13,9 +13,7 @@ To duplicate an existing template and start with version one of that new templat
 
 4. Locate the template to duplicate and on the template details page, click **{{< fa copy >}} Duplicate Template**. 
 
-5. In the Duplicate Template YAML editor that opens, give your copy a **[template name]{.smallcaps}**. 
-
-   Optionally, you can also add a **[template description]{.smallcaps}**.
+5. In the Duplicate Template modal that opens, give your copy a **[template name]{.smallcaps}** and a **[template description]{.smallcaps}**.
 
 6. Click **Duplicate Template** to create a copy of your template.
 
@@ -41,12 +39,10 @@ To duplicate an existing template and start with version one of that new templat
 
 4. Locate the template to duplicate and on the template details page, click **{{< fa copy >}} Duplicate Template**. 
 
-5. In the Duplicate Template YAML editor that opens, give your copy a **[template name]{.smallcaps}**.
-
-   Optionally, you can also add a **[template description]{.smallcaps}**.
+5. In the Duplicate Template modal that opens, give your copy a **[template name]{.smallcaps}** and a **[template description]{.smallcaps}**.
 
 6. Click **Duplicate Template** to create a copy of your template.
 
-Once duplicated, customize your new template to your needs, making it available for use with model documentation or validation reports.
+Once duplicated, customize your new template to your needs, making it available for use with model documentation, validation reports, or ongoing monitoring reports.
 
 ::::
