--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -207,7 +207,7 @@ For this training course, we'll have you register a dummy model via the **{{< fa
 - **Documentation template** — <br>`Binary classification`
 - **Use case** — <br>`Attrition/Churn Management`<br><br>
   You can fill in other options according to your preference.
-2. Click **{{< fa plus >}} Register Model** to add the model to your inventory.
+2. Click **Register Model** to add the model to your inventory.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
