--- a/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
+++ b/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
@@ -29,13 +29,13 @@ listing:
       title: "Using {{< var vm.product >}} for Model Risk Management"
       subtitle: "Module 3"
       description: "{{< fa check >}} Set up custom workflows <br> {{< fa check >}} Set up attestations"
-      reading-time: "60"
+      reading-time: "50"
       author: "{{< var vm.product >}}"
     - path: organizational-oversight-reporting.html
       title: "Organizational Oversight & Reporting"
       subtitle: "Module 4"
       description: "{{< fa check >}} Audit model activity <br> {{< fa check >}} View and customize analytics"
-      reading-time: "25"
+      reading-time: "10"
       author: "{{< var vm.product >}}"
     fields: [title, subtitle, description, reading-time]
 ---
@@ -56,7 +56,7 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 ::: {.w-50-ns .pr3}
 #### Total duration
 
-45 minutes*
+90 minutes
 
 :::
 
