--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -422,7 +422,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 **Duplicate a text block for private use**
 :::
 
-1. Under Workplace Settings, select **Block Library**.
+1. Under Workplace Settings, select **Block Library** and click the **Shared Blocks** tab.
 2. To the right of the text block you created earlier, click **{{< fa ellipsis-vertical >}}** and select **Duplicate Text Block**.
 3. Make your changes to the details of the block, and select the following **[sharing]{.smallcaps}** option: **Private**
 4. Click **Duplicate Block** to save a private copy of the text block.
