Single-sourcing common slides

--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -194,51 +194,7 @@ This is the third notebook in our introductory series, which will walk you throu
 
 ::::
 
-## Get your code snippet
-
-:::: {.columns}
-
-::: {.column width="80%"}
-
-<!-- FOR COPYING THE CODE SNIPPET WE NEED TO USE THIS IFRAME WORKAROUND -->
-
-<div style="zoom: 0.6; overflow: hidden;">
-  <iframe 
-    src="https://app.prod.validmind.ai/model-inventory" 
-    width="100%" 
-    height="750" 
-    style="border: 1px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;"
-    data-preload="yes" 
-    sandbox="allow-same-origin allow-scripts allow-popups allow-forms"
-    allow="clipboard-read; clipboard-write">
-  </iframe>
-</div>
-
-:::
-
-::: {.column width="20%" .f4}
-
-::: {.f5}
-{{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your validation environment:
-
-1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **Getting Started**.
-3. Locate the code snippet and click **Copy snippet to clipboard**.
-
-:::
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-:::
-
-::::
-
-:::: {.tc .f6 .embed}
-**Can't load the {{< var validmind.platform >}}?**
-
-Make sure you're logged in and have refreshed the page in a Chromium-based web browser.
-
-:::
+{{< include /training/common-slides/_get-your-code-snippet.qmd >}}
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/3-developing_challenger_model.html#initialize-the-validmind-library" data-preload="yes"}
 
